--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,6 +3,6 @@
 github: jbloemendal
 patreon: # Replace with a single Patreon username
 open_collective: # Replace with a single Open Collective username
-ko_fi: # jannisbloemendal
+ko_fi: jannisbloemendal
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 custom: # Replace with a single custom sponsorship URL
