--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,7 @@ title: Clue
 email: bloemendal@posteo.nl
 description: >- # this means to ignore newlines until "baseurl:"
   Code inspection instrument (prototype)
-  baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: 'https://jbloemendal.github.io/clue/' # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  jbloemendal
 
