--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Clue
 email: bloemendal@posteo.nl
-description: >- # this means to ignore newlines until "baseurl:"
-  Code inspection instrument (prototype)
+description: Code inspection instrument (prototype)
 url: 'https://jbloemendal.github.io/clue/' # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  jbloemendal
